# GenericSpiralReco

./: .gitignore  AddTrajInfoGadget.cpp  AddTrajInfoGadget.h  CFL_IO.h  CFL_IO2.h  CMakeLists.txt  MyBucketToBufferGadget.cpp  MyBucketToBufferGadget.h  README.md  RefRecoGadget.cpp  RefRecoGadget.h  RemoveRefOSGadget.cpp  RemoveRefOSGadget.h  SpiralGriddingGadget.cpp  SpiralGriddingGadget.h
config/: SimpleReco.xml  piv_GadgetronSpiral.xml  refFFT.xml
container/: gadgetron.recipe  mrdviewer.recipe  readme.md
parameter_maps/: IsmrmrdParameterMap_peSpiral_VE11E.xml  IsmrmrdParameterMap_peSpiral_VE11E.xsl
spiraltraj/: getSpiralTraj.m  mex_SpiralTraj.cpp  nonCartesianTraj.h  spiraltraj_gadgetron.cpp  spiraltraj_gadgetron.h  vdspiral.cpp  vdspiral.h
